feat: Implement button component

--- a/src/assets/_var.scss
+++ b/src/assets/_var.scss
@@ -4,4 +4,8 @@ $error-border: #ff4536;
 $error-text: #ff272c;
 
 $border: #ddd;
-$error-focus: $link;
+$border-focus: $link;
+
+$button: #317ea5;
+$button-hover: $button - #222222;
+$button-focus: $button - #111111;
